--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,17 @@
     <meta name="revisit-after" content="7 days" />
     <meta name="rating" content="general" />
     <meta name="distribution" content="global" />
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T1E80LKZ3M"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T1E80LKZ3M');
+</script>
+
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
